jdbc repositories implemented + tests modified